<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            android:layout_marginBottom="@dimen/_80sdp"
            />

        <TextView
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/curve_solid_rectangle"
            android:text="@string/create_account"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/if_you_have_an_aacount"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/colordarkgrey"


            />
            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/colorBlack"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/here"
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/colordarkgrey"

                />
        </LinearLayout>


    </LinearLayout>
    <TextView
        android:id="@+id/guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_30sdp"
        android:text="@string/continue_as_a_guest"
        android:padding="@dimen/_5sdp"
        android:textSize="@dimen/_10sdp"
        android:textColor="@color/colorBlack"

        />
</RelativeLayout>