<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/_20sdp"
    android:layout_marginRight="@dimen/_20sdp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
    <TextView
        android:layout_width="0dp"
        android:layout_weight=".6"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textStyle="bold"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_16sdp"
        />
        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_weight=".4"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:gravity="right"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/colorblue"
            android:textSize="@dimen/_16sdp"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_regarding_your_swopx_account"
        android:paddingLeft="@dimen/_5sdp"
        android:textColor="@color/colordarkgrey"
        android:textSize="@dimen/_12sdp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:paddingLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@color/colorlight_grey_view"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_marginBottom="@dimen/_20sdp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <LinearLayout
        android:id="@+id/basic_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".9"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:text="@string/basic_info"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_5sdp"
                android:text="@string/basic_company_information"
                android:textColor="@color/colordarkgrey"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/back_btn_blue"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:paddingLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/colorlight_grey_view"/>
    <LinearLayout
        android:id="@+id/project_prefrence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".9"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_prefrences"
                android:textStyle="bold"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_13sdp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_dealing_category_and_other_prefrences"
                android:paddingLeft="@dimen/_5sdp"
                android:textColor="@color/colordarkgrey"
                android:textSize="@dimen/_12sdp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/back_btn_blue"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:paddingLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/colorlight_grey_view"/>

    <LinearLayout
        android:id="@+id/contact_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".9"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_info"
                android:textStyle="bold"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_13sdp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_to_better_reach_your"
                android:paddingLeft="@dimen/_5sdp"
                android:textColor="@color/colordarkgrey"
                android:textSize="@dimen/_12sdp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/back_btn_blue"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:paddingLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/colorlight_grey_view"/>
    <LinearLayout
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".9"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textStyle="bold"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_13sdp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_regarding_your_loaction"
                android:paddingLeft="@dimen/_5sdp"
                android:textColor="@color/colordarkgrey"
                android:textSize="@dimen/_12sdp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/back_btn_blue"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:paddingLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/colorlight_grey_view"/>
    <LinearLayout
        android:id="@+id/notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".9"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                android:textStyle="bold"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_13sdp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basic_notification_settings"
                android:paddingLeft="@dimen/_5sdp"
                android:textColor="@color/colordarkgrey"
                android:textSize="@dimen/_12sdp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/back_btn_blue"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:paddingLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/colorlight_grey_view"/>
    <LinearLayout
        android:id="@+id/account_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".9"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:text="@string/account"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_of_account_type"
                android:paddingLeft="@dimen/_5sdp"
                android:textColor="@color/colordarkgrey"
                android:textSize="@dimen/_12sdp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/back_btn_blue"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:paddingLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/colorlight_grey_view"/>
    <LinearLayout
        android:id="@+id/passwrd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".9"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwrd"
                android:textStyle="bold"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_13sdp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_password_settings"
                android:paddingLeft="@dimen/_5sdp"
                android:textColor="@color/colordarkgrey"
                android:textSize="@dimen/_12sdp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/back_btn_blue"/>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
    </ScrollView>
    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/_1sdp"-->
        <!--android:paddingLeft="@dimen/_5sdp"-->
        <!--android:layout_marginTop="@dimen/_10sdp"-->
        <!--android:background="@color/colorlight_grey"/>-->
</LinearLayout>
</LinearLayout>