<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:padding="@dimen/_5sdp"
                android:text="@string/notifications"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:gravity="right"
                android:padding="@dimen/_5sdp"
                android:text="@string/done"
                android:textColor="@color/colorblue"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_5sdp"
            android:text="@string/here_is_what_is_going_on_today"
            android:textColor="@color/colordarkgrey"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/no_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:padding="@dimen/_5sdp"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/a_person_never_made_a_mistake_never_tried_anything_new" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:layout_marginTop="@dimen/_5sdp"
        android:visibility="gone"></android.support.v7.widget.RecyclerView>
</RelativeLayout>